fixed nav bar button spacing on phone

--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -5,7 +5,7 @@
 
     .box .button {
         width: 3rem;
-        margin-bottom: 0rem;
+        margin: 0rem .25rem 0.25rem .25rem;
     }
 
     .box .setting-button {
